--- a/app/views/projects/_task_fields.html.erb
+++ b/app/views/projects/_task_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields">
-    <%= f.input :description %>
-    <%= f.input :done, as: :boolean %>
+    <%= f.text_field :description %>
+    <%= f.check_box :done, as: :boolean %>
     <%= link_to_remove_association "remove task", f %>
 </div>
